# rhema_mcp

./: .gitignore  Dockerfile.server  README.md  TECHNICAL_DESIGN.md  docker-compose.yml  requirements.txt  rhelo.db  rhemamcp_plan.md  server.py  setup.sh
.github/workflows/: build-windows.yml  publish-desktop-release.yml  release.yml
docs/: DATABASE_MIGRATIONS.md  DATABASE_SCHEMA.md  ENGLISH_TRANSLATIONS.md  MCP_INTEGRATION.md  TRANSLATION_COMPARE_ARCHITECTURE.md  TRANSLATION_CONTRACT.md  UI_UX_SPEC.md  WINDOWS_TTS_TEST_PLAN.md
docs/releases/: desktop-v0.1.1-beta.1-2026.07.20.md
frontend/: Dockerfile  README.md  eslint.config.mjs  next.config.ts  package-lock.json  package.json
frontend/scripts/: desktop-version.mjs  desktop-version.test.mjs  translation-compare.test.ts  tts-recovery.test.ts  (+1 more)
frontend/src-tauri/: .gitignore  Cargo.toml  Info.plist  build.rs  tauri.conf.json
frontend/src-tauri/capabilities/: default.json
frontend/src-tauri/icons/: icon.icns
frontend/src-tauri/src/: lib.rs  research.rs
migrations/: 000_setup_new_testament.py  001_add_geography.py  002_add_strongs_lexicon.py  003_add_commentaries.py  004_add_timeline.py  005_add_old_testament.py  006_update_cross_references.py  007_add_dictionary.py  008_add_genealogy.py  009_add_naves_and_hitchcocks.py  010_normalize_translations.py  011_sessions_schema.py  012_add_english_translations.py
rhelo_backend/: __init__.py  config.py  database.py  http_server.py  mcp_server.py  tool_names.py  translations.py
scripts/: finalize_seed_database.py
tests/: test_backend.py
(+44 files in other folders)
