[package]
name = "rhelo"
version = "0.1.0"
description = "Offline-first Bible study desktop application"
authors = ["Rhelo contributors"]
license = ""
repository = "https://github.com/JEDIx420/rhema_mcp"
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.3", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
rusqlite = { version = "0.32.1", features = ["bundled"] }
uuid = { version = "1.23", features = ["v4"] }
log = "0.4"
tauri = { version = "2.11.3", features = [] }
tauri-plugin-log = "2"
whisper-rs = "0.14.0"
tts = "0.26.3"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
printpdf = { version = "0.9.1", default-features = false }
regex = "1.12.4"
unicode-normalization = "0.1.25"
